theme/style.css
html, body {margin: 0; height: 100vh;}
html {min-height: 100vh;}
body {
  font-family: Ubuntu, sans-serif;
  padding: 0;
  background-color: #ffffff;
  color: #333;
  width: 100%;
  text-align:center;
}

.container {
  box-sizing: border-box;
  margin:0 auto;
  width:1080px;
  overflow: hidden;
}

.box {
  width:233px;
  float:left;
  background-color:#e3e3e3;
  text-align:left;
  height:300px;
}

.oem {
  font-size:32px;
}

.homeenergy, .solar, .openevse, .heatpump {
  background-size:cover;
  min-height:400px;
  color:#fff;
  text-align: left;
}

@media (max-width: 620px) {
  .homeenergy, .solar, .openevse, .heatpump {
    min-height: 250px;
  }
}

@media (min-width: 800px) {
  .homeenergy, .solar, .openevse, .heatpump {
    min-height: 300px;
  }
}

.zerocarbon {
  background-size:cover;
  color:#fff;
}

.cover {
  background:#ffffff no-repeat left center;
  background-size:cover;
}

.halfbox {
  width:480px;
  float:left;
}

h3 {
  font-size:30px;
}

a {
  text-decoration:none;
  color:#ffffff;
}

a:visited {
  text-decoration:none;
  color:#ffffff;
}

a:hover {
  text-decoration:none;
  color:#ffffff;
}

.fa {text-shadow: 2px 2px 2px rgba(150,150,150,0.5)}

.box4 a {
  text-decoration:none;
  color:#ffffff;
  cursor: pointer;
}

.box4 a:visited {
  text-decoration:none;
  color:#000;
}

.box4 a:hover {
  text-decoration:none;
  color:#333;
}

.emoncmsappimg {
  float:right;
  width:250px
}

.oemheading {
  color:#44b3e2;
  font-size:30px;
  font-weight:bold;
  font-family:Ubuntu;
}

.oemheading2 {
  color:#fff;
  padding-top:80px;
  padding-bottom:20px;
  font-size:45px;
  font-weight:bold;
}

.column,
.columns {
  width:100%;
  float: left;
  text-align:left;
  box-sizing: border-box; }

.b4img {
  width:100%;
  min-height: 130px;
}

.b4dsc {
  box-sizing: border-box;
  width:100%;
  height:130px;
  overflow: auto;
  padding-top: 0;
}

@media (max-width: 360px) {
  .b4dsc li {
    font-size: 12px;
  }
}

.box2 {
  overflow: hidden;
}

.box2 ul {
  padding-left: 15px;
}

@media (max-width: 499px) {
  .b4dsc {
    width: 50%;
    float: right;
    padding-top: 0;
  }
}

@media (min-width: 500px) and (max-width: 619px) {
  .b4dsc {
    width: 50%;
    float: right;
    padding-top: 10px;
    overflow: hidden;
  }
}

@media (max-width: 619px) {
  .container {
    width: 100%;
  }

  .emoncmsappimg {
    width:200px
  }

  .oemheading { font-size:30px; }
  .oemheading2 { padding-top:30px; font-size:27px; }

  .b4img {width:50%;float:left;}
}

@media (min-width: 620px) and (max-width: 799px) {
  .container {
    width: 600px;
  }

  .box2 { width:50%; }
  .box3 { width:33%; }
  .box4 { width:25%; }

  .b4dsc {min-height:180px;}
}

@media (min-width: 800px) and (max-width: 1079px) {
  .container {
    width: 100%;
      /*width: 100%;*/
  }

  .emoncmsappimg {
    width:200px
  }

  .box2 { width:50%; }
  .box3 { width:33%; }
  .box4 { width:25%; }
}

@media (min-width: 1080px) {
  .container {
    width: 1080px;
  }

  .box2 { width:50%; }
  .box3 { width:33%; }
  .box4 { width:25%; }
}

.inner { margin:7px;}
.box3 { text-align:center; }

/*---------------------------------------------------------------------/
// Cover image
/*--------------------------------------------------------------------*/

.oemName {
  color: #ffffff;
  width: 100%;
  height: 50%;
  display: table;
}

.oemName-inner {
  display: table-cell;
  vertical-align: middle;
  font-size: 42px;
  padding: 10px;
}

.oemDescription {
  color: #ffffff;
  width: 100%;
  height: 50%;
  display: table;
  text-shadow: 0 0 20px rgba(0,0,0,0.1);
}

.oemDescription-inner {
  display: table-cell;
  vertical-align: middle;
  font-size: 24px;
  padding: 10px;
}

.oemDescription-inner-second {
  font-size: 20px;
  margin: 5px auto;
}

@media (max-width: 450px) {
  .oemName-inner {
    font-size: 30px;
  }
  
  .oemDescription-inner {
    font-size: 16px;
    padding: 20px;
  }
  
  .oemDescription-inner-second {
    font-size: 14px;
    max-width: 200px;
  }
}

@media (min-width: 450px) and (max-width: 799px) {
  .oemName-inner {
    font-size: 40px;
  }
}

@media (min-width: 800px) and (max-width: 1080px) {
  .oemName-inner {
    font-size: 50px;
  }
}

/*---------------------------------------------------------------------/
// OEM colors
/*--------------------------------------------------------------------*/

.oemGray {
  background-color: #777777;
}

.oemBlue {
  background-color: #44b3e2;
}

/*---------------------------------------------------------------------/
// Learn
/*--------------------------------------------------------------------*/

.learnDesc {
  width: 600px;
  height: 100px;
  margin: 0 auto;
  box-sizing: border-box;
}

.learnDesc-book {
  box-sizing: border-box;
  display: inline-block;
}

.learnDesc-desc {
  box-sizing: border-box;
  display: inline-block;
  width: 400px;
  vertical-align: top;
  height: 100px;
  padding:18px 0 10px 0;
  overflow: auto;
}

.learnDesc-desc-header {
  text-align: left;
  margin: 0;
}

.learnDesc-desc p {
  text-align: left;
  margin:0;
}

@media (max-width: 620px) {
  .learnDesc {
    width: 100%;
    height: 190px;
  }
  .learnDesc-desc {
    width: 50%;
    height: 190px;
  }
}

.learnP {
  padding: 0 5px 0 5px;
}

.learnpageIcons {
  width: 180px;
  height: 180px;
  box-sizing: border-box;
  border: 8px solid #44b3e2;
  display: table;
  background-color: #ffffff;
  color: #ffffff;
  box-shadow: none;
  transition: 0.3s ease-in-out;
  margin: 0 auto;
	padding: 0;
	font-size: 30px;
	text-align: center;
	line-height: 48px;
  border-radius: 50%;
}

.learnpageIcons i {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
  text-shadow: none;
  color: #44b3e2;
}

.inner:hover .learnpageIcons {
  border: 12px solid #44b3e2;
}

/*--------------------------------------------
    custom header...
--------------------------------------------*/

.oemblueBar {
  width: 100%;
  top: 0;
  height: 42px;
  background-color: #44b3e2;
}

@media screen and (max-width: 400px) {
    .oemWrap {
        display: none;
    }
}

.fa-navicon {
    display: none;
    cursor: pointer;
    font-size: 30px;
    line-height: 42px;
    position: absolute;
    left: 0;
    color: #ffffff;
    padding-left: 12px;
    z-index: 10;
}

@media screen and (max-width: 1079px) {
    .fa-navicon {
        display: inline-block;
    }
}

.titleHolder {
    position: relative;
    top: 0;
    width: 100%;
    height: 42px;
    background-color: #44b3e2;
    overflow: hidden;
}

.thisTitle {
    display: inline-block;
    color: #ffffff;
    position: absolute;
    left: 0;
    line-height: 42px;
    padding-left: 7px;
    font-size: 16px;
}

.thisTitle a {
    color: #ffffff;
}

@media screen and (max-width: 1079px) {
    .thisTitle {
        width: 100%;
        position: absolute;
        text-align: right;
        font-size: 20px;
        padding-left: 0;
        
    }
    .thisTitle a {
        padding-right: 12px;
    }
}

/*--------------------------------------------
    site links on larger screens...
--------------------------------------------*/

.navigation {
    position: absolute;
    display: inline-block;
    top: 0;
    right: 0;
    height: 42px;
    min-width: 700px;
    overflow: visible;
    padding-right: 7px;
}

    .navigation ul {
        float: right;
        list-style-type: none;
        top: 0;
        margin: 0;
        padding: 0;
        height: 100%;
    }
       
    .navigation ul li {
        float: left;
        background-color: #44b3e2;
    }
           
    .navigation ul li a {
        display: block;
        line-height: 42px;
        font-family:"ubuntu";
        font-size: 16px;
        text-align: center;
        padding-left: 10px;
        padding-right: 10px;
        color: #ffffff;
    }

@media screen and (min-width: 1080px) {
    .navigation ul li:nth-child(1) {
        width: 82px;
    }
    .navigation ul li:nth-child(2) {
        width: 81px;
    }
    .navigation ul li:nth-child(3) {
        width: 85px;
    }
    .navigation ul li:nth-child(4) {
        width: 113px;
    }
    .navigation ul li:nth-child(5) {
        width: 123px;
    }
    .navigation ul li:nth-child(6) {
        width: 73px;
    }
    .navigation ul li:nth-child(7) {
        width: 75px;
    }
}

/*--------------------------------------------
    site links on smaller screens...
--------------------------------------------*/

.menuFreeze {
    height: 100%;
    overflow: hidden;
}

@media screen and (max-width: 1079px) {

    .navigation {
        position: fixed;
        display: none;
        top: 0;
        left: 0;
        height: 100vh;
        margin: 0;
        width: 0;
        font-size: 20px;
        background-color: #44b3e2;
        color: #ffffff;
        z-index: 9999;
        box-sizing: border-box;
        overflow: auto;
        min-width: 0;
        padding-right: 0;
    }
    
        .navigation ul {
            list-style-type: none;
            margin: 0;
            padding-top: 0;
        }
        
        .navigation ul li a {
            box-sizing: border-box;
            font-family: "ubuntu";
            font-size: 20px;
            display: block;
            color: #ffffff;
            padding: 20px 20px 20px 40px;
            min-width: 220px;
            text-align: left;
        }
        
        .navigation ul li .fa {
            min-width: 25px;
        }
}

/*--------------------------------------------
    grayed out overlay when menu is active...
--------------------------------------------*/

.blackOut {
    position: fixed;
    display: none;
    top: 0;
    right: 0;
    height: 100vh;
    width: 100vw;
    background-color: rgba(0,0,0,0.5);
    overflow: hidden;
    cursor: pointer;
    z-index: 11;
}

/*--------------------------------------------
    highlight active link...
--------------------------------------------*/

.actoemLink {
    background-color: #368fb4 !important;
}

    .actoemLink a {
        color: #ffffff !important;
    }
    
/*--------------------------------------------
    footer...
--------------------------------------------*/

footer {
  position: relative;
  background-color: #368fb4;
  width: 100%;
  height: 50px;
}

.footer-wrapper {
  height: 100%;
}

.footer-wrapper a {
  display: inline-block;
  height: 100%;
  line-height: 50px;
  cursor: pointer;
  margin: 0 20px 0 20px;
  font-size: 16px;
}

